tests/check-assign-target/addition.xdsl
// RUN: choco-opt -p check-assign-target %s | filecheck %s

builtin.module() {
  choco.ast.program() {} {
    choco.ast.assign() {
      choco.ast.binary_expr() ["op" = "+"] {
        choco.ast.literal() ["value" = 1 : !i32]
      } {
        choco.ast.literal() ["value" = 1 : !i32]
      }
    } {
      choco.ast.literal() ["value" = 1 : !i32]
    }
  }
}

// CHECK:      Semantic error: Found BinaryExpr as the left-hand side of an assignment. Expected to find variable name or index expression only.
